fix on IE 11

--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -42,7 +42,9 @@
 }
 
 .cc-banner .cc-message {
-  flex: 1;
+  display: block;
+  flex: 1 1 auto;
+  max-width: 100%;
   margin-right: 1em;
 }
 
@@ -53,7 +55,7 @@
   align-items: center;
   align-content: space-between;
 }
-.cc-compliance>.cc-btn {
+.cc-floating .cc-compliance>.cc-btn {
   flex: 1;
 }
 
